# mpicpp

./: CMakeLists.txt  README.md  config.cmake.in  mpicpp.cpp  mpicpp.hpp
